add route to register/account page

--- a/src/components/PaymentMethod/PaymentMethod.css
+++ b/src/components/PaymentMethod/PaymentMethod.css
@@ -19,7 +19,7 @@
     margin: 50px;
 }
 
-h1 {
+/* h1 {
     font-size: 24px;
     margin-bottom: 16px;
     margin: 50px;
@@ -42,7 +42,7 @@ label {
 
 input {
     margin-right: 8px;
-}
+} */
 
 .continue {
     padding: 10px;
