--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,7 +1,5 @@
 .register-form {
-  /* position: absolute; */
-  top: 0;
-  left: 0;
+  position: relative;
 }
 
 .register-form-input-field {
@@ -15,7 +13,7 @@
 }
 
 .visibility-icon {
-  /* position: absolute; */
+  position: absolute;
   top: 50%;
   right: 7px;
   width: 25px;
@@ -65,11 +63,6 @@
 }
 
 @media (min-width: 769px) {
-  .register-form {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
   .two-inputs-row {
     display: flex;
     justify-content: space-between;
