--- a/src/components/SalePage/Sale.css
+++ b/src/components/SalePage/Sale.css
@@ -41,7 +41,7 @@
 
 .category-page .product:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  scale: 1.04;
+  /* scale: 1.04; */
 }
 
 .category-page .product-img {
