--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,12 @@
+@keyframes moveUp {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -30px;
+  }
+}
+
 .header-container {
   position: relative;
   width: 100vw;
@@ -5,7 +14,6 @@
   justify-content: center;
   padding: 20px 0 20px 0;
   font-family: var(--body-texts-text-1-font-family);
-  
 }
 
 .header-container > button {
@@ -116,6 +124,28 @@
   border-radius: 50%;
   background-color: var(--main-primary);
   font-size: 16px;
+}
+
+.favorites-add-message {
+  position: absolute;
+  width: fit-content;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgba(0, 140, 0);
+  padding: 4px;
+  border-radius: 5px;
+  animation: moveUp 2s ease-in-out;
+}
+
+.favorites-del-message {
+  position: absolute;
+  width: fit-content;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgb(200, 10, 10);
+  padding: 4px;
+  border-radius: 5px;
+  animation: moveUp 2s ease-in-out;
 }
 
 @media screen and (max-width: 1173px) {
