--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,10 @@
   flex-direction: column;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 .vertically-center {
   align-items: center;
 }
@@ -287,7 +291,7 @@
   margin: 0 auto;
   padding: 30px 20px 20px 20px;
   background-color: var(--form-backgroundcolor);
-  min-inline-size: min-content; 
+  min-inline-size: min-content;
   box-sizing: border-box;
 }
 
