--- a/src/components/MainPage/MostPopular/MostPopular.css
+++ b/src/components/MainPage/MostPopular/MostPopular.css
@@ -13,8 +13,18 @@
   min-width: 560px;
   max-width: 1000px;
   justify-self: center;
-
 }
+
+.category-page > .most-popular > .most-popular-container {
+  display: flex;
+  flex: 1 0 12.5%;
+  justify-content: space-around;
+  min-width: 560px;
+  max-width: 1000px;
+  justify-self: center;
+}
+
+
 @media screen and (max-width: 1070px) {
   #popular-8 {
     display: none;}
@@ -108,6 +118,18 @@ margin: 5px 0 5px 0;
   font-style: normal;
   padding-left: 2rem;
 }
+
+.most-popular-title h1 {
+  font-family: "Poppins-Medium", Helvetica; 
+  font-size: xx-large;
+  display: flex;
+  justify-content: flex-start;
+  width: clamp(320px, 100%, 1000px);
+  padding-bottom: 1rem;
+  font-style: normal;
+  padding-left: 2rem;
+  color: #555555;
+}
 }
 
 .most-popular .link-most-popular {
@@ -115,3 +137,16 @@ margin: 5px 0 5px 0;
   color: var(--color-text-text);
 }
 
+@media screen and (max-width: 850px) {
+
+  .most-popular-title h1 {
+    font-family: "Poppins-Medium", Helvetica; 
+    font-size: xx-large;
+    display: flex;
+    justify-content: center;
+    width: clamp(320px, 100%, 1000px);
+    padding-bottom: 1rem;
+    font-style: normal;
+    padding-left: 2rem;
+  }
+  }
