--- a/src/components/SalePage/Sale.css
+++ b/src/components/SalePage/Sale.css
@@ -35,7 +35,7 @@
   color: #474747;
   height: auto;
   position: relative;
-  width: clamp(100px, 25%, 245px);
+  width: clamp(245px, 25%, 245px);
   transition: 0.2s ease-in-out;
 }
 
@@ -125,7 +125,9 @@
   background-color: #fff;
   box-shadow: inset 0 0 0 2px #fff;
   max-height: 100%;
+  border-radius: 10px;
 }
+
 
 .product a {
   text-decoration: none;
@@ -211,6 +213,7 @@
 @media screen and (max-width: 1075px) {
   .category-page .product-container {
     min-width: 785px;
+    justify-content: center;
   }
 }
 
