add forgot password feature

--- a/src/components/Header/FavoritesDropdown/FavoritesDropdown.css
+++ b/src/components/Header/FavoritesDropdown/FavoritesDropdown.css
@@ -23,6 +23,12 @@
   animation: grow 0.5s ease;
 }
 
+.likes-dropdown a {
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--color-text-text);
+}
+
 .liked-item-wrapper {
   min-width: 300px;
   padding: 5px 10px;
