--- a/src/components/Checkout/Shopping/Shopping.css
+++ b/src/components/Checkout/Shopping/Shopping.css
@@ -21,7 +21,6 @@
   border-bottom: 1px solid var(--color-text-text);
   max-width: 600px;
   padding: 10px 10px 10px 0;
-  cursor: pointer;
 }
 
 .shopping-cart-item:hover {
@@ -37,7 +36,17 @@
   display: flex;
 }
 
+.shopping-cart-item-wrapper a {
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--color-text-text);
+}
+
 .shopping-cart-item-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   max-width: 300px;
 }
 
