--- a/src/components/Header/CartDropdown/CartDropdown.css
+++ b/src/components/Header/CartDropdown/CartDropdown.css
@@ -33,6 +33,12 @@
   border-bottom: 2px solid var(--color-dark-grey);
 }
 
+.cart-dropdown a {
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--color-text-text);
+}
+
 .cart-item {
   display: flex;
   max-width: 400px;
@@ -69,14 +75,14 @@
 .checkout-button {
   background-color: #0056b3;
   font: var(--body-texts-text-1-font-family);
-  color: #ffffff; 
+  color: #ffffff;
   border: none;
   padding: 10px 20px;
-  text-align: center; 
+  text-align: center;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-  cursor: pointer; 
+  cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
