--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -1,5 +1,9 @@
 .search-page {
   margin: 20px 0 20px 0;
+  display: flex;
+  justify-content: center;
+  min-height: calc(100vh - 420px);
+  max-width: 1060px;
 }
 
 .search-result-container {
@@ -7,12 +11,16 @@
   flex-wrap: wrap;
   gap: 20px;
 
-  @media screen and (max-width: 1292px) {
-    max-width: 771px;
+  @media screen and (max-width: 1683px) {
+    max-width: 1060px;
   }
 
-  @media screen and (max-width: 962px) {
-    max-width: 507px;
+  @media screen and (max-width: 1345px) {
+    max-width: 790px;
+  }
+
+  @media screen and (max-width: 1008px) {
+    max-width: 520px;
   }
 
   @media screen and (max-width: 768px) {
@@ -21,6 +29,7 @@
 }
 
 .search-page .product {
+  width: 250px;
   border: 0.1px #e2e2e2;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,7 +37,7 @@
   padding: 10px;
   text-decoration: none;
   color: #474747;
-  height: 425px;
+  height: 450px;
   position: relative;
   transition: 0.2s ease-in-out;
 }
@@ -47,9 +56,14 @@
 }
 
 .search-page .product-img {
-  max-width: 220px;
-  max-height: 100%;
+  width: 200px;
+  height: 200px;
   transition: transform 0.4s ease-out;
+}
+
+.search-page .text-wrapper-3 {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .search-page .ofer {
@@ -94,6 +108,10 @@
   position: absolute;
   top: 30px;
   left: 30px;
+}
+
+.search-page .discount-sub {
+  display: flex;
 }
 
 .search-page .cart-btn {
