--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,6 +208,7 @@
 
 .error {
   width: fit-content;
+  height: fit-content;
   font-size: 20px;
   font-weight: 600;
   color: rgb(200, 10, 10);
@@ -220,6 +221,7 @@
 
 .success {
   width: fit-content;
+  height: fit-content;
   margin: 10px auto 10px auto;
   font-size: 20px;
   font-weight: 600;
