--- a/src/components/SalePage/Sale.css
+++ b/src/components/SalePage/Sale.css
@@ -45,8 +45,8 @@
 }
 
 .category-page .product-img {
-  max-width: 220px;
-  max-height: 100%;
+  width: 220px;
+  height: 220px;
   margin: auto;
   transition: transform 0.4s ease-out;
 }
@@ -90,7 +90,6 @@
   align-items: center;
   margin: 1rem 0 1rem 0;
   gap: 1rem;
-  margin-right: 3rem;
   width: 100%;
 }
 
