--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,13 @@
   justify-content: center;
   padding: 20px 0 20px 0;
   font-family: var(--body-texts-text-1-font-family);
+  
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  z-index: 1000; 
+  background-color: white;
 }
 
 .header-container > button {
