--- a/src/components/MainPage/MenuMain/menuMain.css
+++ b/src/components/MainPage/MenuMain/menuMain.css
@@ -11,6 +11,7 @@
   width: 100%;
   /* background-color: #4b4a4a; */
   font-family: "Poppins-Regular", Helvetica;
+  margin-top: 8rem;
 }
 
 .menu {
