--- a/src/components/MainPage/SaleContainer/saleContainer.css
+++ b/src/components/MainPage/SaleContainer/saleContainer.css
@@ -24,8 +24,8 @@
 }
 
 .sale-container .product-img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 220px;
+  height: 220px;
   margin: auto;
   transition: transform 0.4s ease-out;
 }
