Small style changing for header and navbar. Now sticky is adaptive

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,7 @@
 .sticky {
   position: fixed;
   top: 0;
+  left: 0;
   z-index: 1000; 
   background-color: white;
 }
@@ -178,9 +179,10 @@
 @media screen and (max-width: 1173px) {
   .header-menu-container {
     width: 100%;
+    justify-content: center;
   }
   .header-container {
-    width: min-content;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
