filters fo solar panels are done

--- a/src/components/MainPage/MostPopular/MostPopular.css
+++ b/src/components/MainPage/MostPopular/MostPopular.css
@@ -15,13 +15,13 @@
   justify-self: center;
 }
 
-.category-page > .most-popular > .most-popular-container {
+.product-page > .most-popular > .most-popular-container {
   display: flex;
   flex: 1 0 12.5%;
-  justify-content: space-around;
   min-width: 560px;
   max-width: 1000px;
-  justify-self: center;
+  width: 100%;
+  
 }
 
 
@@ -65,19 +65,40 @@
 .most-popular .category {
   width: 120px;
   margin: 10px;
-  /* background-color: var(--base-gray-background); */
+  background-color: var(--base-gray-background);
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
-  /* border: 1px solid #ccc; */
+  border: 1px #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 10px 0 #eb6d20; */
   transition: transform .4s ease-out;
   cursor: pointer;
   &:hover {
     transform: scale(1.05);
   }
 }
+
+.most-popular .category-active {
+  width: 120px;
+  margin: 10px;
+  background-color: var(--base-gray-background);
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px #ccc;
+  border-radius: 5px;
+  /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 0 10px 0 #eb6d20;
+  transition: transform .4s ease-out;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+
 
 .most-popular .image-container {
   position: relative;
