--- a/src/components/Filters/filters.css
+++ b/src/components/Filters/filters.css
@@ -108,8 +108,8 @@ width: 100%;
   }
   
   .filters .image {
-    height: auto;
-    width: 100%;
+    height: 85px;
+    width: 85px;
     border-radius: 5px;
   }
   
