--- a/src/components/MainPage/MenuMain/menuMain.css
+++ b/src/components/MainPage/MenuMain/menuMain.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 .menu-container {
@@ -43,14 +44,14 @@
   margin: 1rem 0 1rem 0;
 }
 
-.menu a {
+/* .menu a {
   text-decoration: none;
   display: block;
   color: inherit;
   margin: inherit;
   padding: inherit;
   border: inherit;
-}
+} */
 
 .menu a,
 a:visited,
@@ -60,6 +61,7 @@ a:active {
   padding: 0;
   border: 0;
   width: 100%;
+  text-decoration: none;
 }
 
 .left-part {
@@ -99,6 +101,7 @@ a:active {
 .right-part-inner:hover {
   transform: scale(1.01);
   transition: transform 0.4s ease-in-out;
+  
 }
 
 .gradient {
