--- a/src/components/MainPage/MostPopular/MostPopular.css
+++ b/src/components/MainPage/MostPopular/MostPopular.css
@@ -77,6 +77,7 @@
   cursor: pointer;
   &:hover {
     transform: scale(1.05);
+    box-shadow: 0 0 10px 0 #eb6d20;
   }
 }
 
@@ -104,11 +105,13 @@
   position: relative;
   height: auto;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .most-popular .image {
-  height: auto;
-  width: 100%;
+  height: 85px;
+  width: 85px;
   border-radius: 5px;
 }
 
@@ -138,6 +141,7 @@ margin: 5px 0 5px 0;
   padding-bottom: 1rem;
   font-style: normal;
   padding-left: 2rem;
+  color: #555555;
 }
 
 .most-popular-title h1 {
