--- a/src/components/SalePage/Sale.css
+++ b/src/components/SalePage/Sale.css
@@ -9,13 +9,13 @@
 .category-page .product-container {
   display: flex;
   flex-wrap: wrap;
-  width: clamp(560px, 100%, 1000px);
+  width: clamp(560px, 100%, 1045px);
   height: auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
   gap: 0;
   position: relative;
-  min-width: 1045px;
+  max-width: 1060px;
 }
 
 @media screen and (max-width: 800px) {
