add maxwidth for dropdowns and make em scrollable

--- a/src/components/Header/FavoritesDropdown/FavoritesDropdown.css
+++ b/src/components/Header/FavoritesDropdown/FavoritesDropdown.css
@@ -11,6 +11,8 @@
 }
 
 .likes-dropdown {
+  max-height: 80vh;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
