--- a/src/components/Header/CartDropdown/CartDropdown.css
+++ b/src/components/Header/CartDropdown/CartDropdown.css
@@ -15,6 +15,8 @@
 }
 
 .cart-dropdown {
+  max-height: 80vh;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
