--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,6 @@
 .navbar {
   margin: 0 auto;
+  margin-bottom: 3rem;
   padding: 15px 20px 15px 20px;
   /* background-color: #171173; */
   display: flex;
@@ -12,7 +13,7 @@
   border-bottom-left-radius: 35px;
   &.sticky {
     position: sticky;
-    top: 90px;
+    top: 0;
     z-index: 1;
   }   
 }
@@ -66,5 +67,6 @@
 @media screen and (max-width: 768px) {
   .navbar {
     display: none;
+    margin-bottom: 3rem;
   }
 }
