new branch main pulled

--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -9,13 +9,11 @@ body {
 
 .product-page {
   display: flex;
-  max-width: 1200px;
-  margin: 150px auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
   background-color: #fff;
-  
+  margin: 145px 5% 0 5%;
 }
 
 /* Add this to your existing CSS file or create a new one */
@@ -26,35 +24,37 @@ body {
 
 /* ProductPageStyles.css */
 .product-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 30px;
   width: 250px;
-  height: 100%;
+  height: 250px;
   max-height: 300px; /* Adjust the maximum height as needed */
   overflow: hidden;
   position: relative;
-  transition: transform 0.3s;
+  transition: transform 0.1s;
   padding: 0px;
+  border-radius: 8px;
 }
 
 .product-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  border: 5px solid var(--main-medium);
+  object-fit: contain; /* Maintain aspect ratio and cover the container */
+  border-radius: 8px;
   padding: 0px;
+  height: 235px;
+  width: 235px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
+  border-radius: 8px; /* Adjust the border-radius for rounded corners */
+  transition: transform 0.3s;
 }
 
-.product-image:hover {
-  transform: scale(1.02);
+.product-image img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s;
 }
 
 /* Responsive styles for smaller screens */
-@media (max-width: 768px) {
-  .product-image {
-    width: 100%;
-    max-height: 200px; /* Adjust the maximum height for smaller screens */
-  }
-}
 
 .product-details {
   flex: 1;
@@ -110,10 +110,18 @@ body {
   font-size: 1.2rem;
 }
 
+@media (min-width: 801px) and (max-width: 1200px) {
+  .product-page {
+    margin-top: 200px;
+  }
+}
+
 /* Responsive Styles */
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .product-page {
     flex-direction: column;
+    margin-top: 300px;
+    margin: 300px 5% 0 5%;
   }
 
   .product-details {
@@ -129,5 +137,31 @@ body {
   input {
     width: 100%;
     margin-top: 10px;
+  }
+  .product-image {
+    display: flex;
+    justify-content: center; /* Horizontally center the content */
+    align-items: center; /* Vertically center the content */
+    width: auto;
+    margin: 0px;
+    box-shadow: 0;
+    border-radius: 0; /* Adjust the border-radius for rounded corners */
+    /* Add other styles as needed */
+    height: auto;
+  }
+
+  .product-image img {
+    object-fit: contain; /* Maintain aspect ratio and cover the container */
+    border-radius: 8px;
+    padding: 0px;
+    margin: 5px 0 5px 0;
+    height: 280px;
+    width: 280px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
+    border-radius: 8px; /* Adjust the border-radius for rounded corners */
+  }
+  .product-image img:hover {
+    transform: scale(1.01);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.13); /* Subtle box shadow */
   }
 }
